backends/x11: Fix c&p issue in tablet area calculation

instead of filling in the last array value, it overwrote the previous one.

https://bugzilla.gnome.org/show_bug.cgi?id=781703